	TODO: Speed up music and sound effects during fast forwarding.
ADDED: You can now use quicksave and quickload while recording a replay.
	TODO: Verify that the quickloaded state is from the currently running recording.

(no release date yet)
=================
(upcoming version)

FIXED: The prince can now grab a ledge at the bottom right corner of a room with no room below.
	Details: https://forum.princed.org/viewtopic.php?p=30410#p30410
FIXED: Don't allow killing a skeleton in cheat mode.
FIXED: Ctrl+S didn't mute music (except death music).
FIXED: A falling tile on the left side of a pillar could cause the blue stripe to be drawn over the pillar.
FIXED: The top of moving gates became glitched on levels using non-default palettes.
FIXED: The right edge of pressed drop buttons was black if a big pillar was next to them.
FIXED: Guards appeared in the current room when they fell into spikes in an adjacent room. (Example: original level 11, room 22.)
FIXED: Show an error message if a data file is missing.
FIXED: "Remember guard hp" for non-standard guards.
FIXED: Colored torches were not restored on quickload if you (quit and) restarted the game after quicksave.
DONE: Added command-line parameter "mute": Start the game with sound off.
FIXED: Fixed compiling with some features #undefined. (USE_TEXT, USE_LIGHTING, USE_MENU)
DONE: Hide references to various features if the game was compiled without them.
DONE: A scrollbar appears in the pause menu if scrolling is possible.
	It's not clickable yet, it just shows where you are in the list.
DONE: Added command-line parameter "playdemo": Make the demo level playable.
FIXED: Fixed the detection of Ctrl+L during the demo level.
FIXED: Create the screenshots directory in SDLPoP's directory, even if the current directory is something else.
	This is to match how the replay folder works.
FIXED: On Windows, use Unicode/UTF-8 for mkdir().
	So the replay and screenshots directories can be created within non-ASCII paths.