@@ -380,7 +380,8 @@ void restore_room_after_quick_load() {
 
 	//need_full_redraw = 1;
 	different_room = 1;
-	next_room = drawn_room;
+	// Show the room where the prince is, even if the player moved the view away from it (with the H,J,U,N keys).
+	next_room = drawn_room = Kid.room;
 	load_room_links();
 	//draw_level_first();
 	//gen_palace_wall_colors();
@@ -389,6 +390,13 @@ void restore_room_after_quick_load() {
 	//redraw_screen(1); // for room_L
 
 	hitp_delta = guardhp_delta = 1; // force HP redraw
+	// Don't draw guard HP if a previously viewed room (with the H,J,U,N keys) had a guard but the current room doesn't have one.
+	if (Guard.room != drawn_room) {
+		// Like in clear_char().
+		Guard.direction = dir_56_none;
+		guardhp_curr = 0;
+	}
+
 	draw_hp();
 	loadkid_and_opp();
 	// Get rid of "press button" message if kid was dead before quickload.
